k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: devsecops-pipeline
spec:
  selector:
    app: demo-service
    quarantine: "false"
  ports:
    - port: 80
      targetPort: 8080
